# FITkit

./: .gitignore  .gitmodules  download.sh  libusb-compat-0.1.5.tar.bz2  msp430-libc.tar.xz  org.FITVUT.qdevkit.appdata.xml  org.FITVUT.qdevkit.desktop  org.FITVUT.qdevkit.json  org.FITVUT.qdevkit.json.old  pythonqt.tar.xz  supertux-bundle.json
.flatpak-builder/cache/refs/heads/x86_64-org.FITVUT.qdevkit.json/: build-fcmake  build-fkflash  build-libftdi  build-libkitclient  build-libssh  build-libusb  build-python-2.7  build-pythonqt  build-qdevkit  build-qdevkit-plugins  build-qt4  build-swig  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.FITVUT.qdevkit.json
archive/: gcc-3.2.3.tar.xz
changes/PythonQt3.0/: CMakeLists.txt
changes/PythonQt3.0/generated_cpp_47/: PythonQt_QtBindings.cpp
changes/PythonQt3.0/src/: PythonQtClassInfo.cpp  PythonQtMethodInfo.cpp
changes/fcmake-current/fcmake-0.4.2/src/: main-scan.cpp  remote.h
changes/fkflash-current/fkflash-0.1.7/: CMakeLists.txt  fkflash.py  setup.py
changes/fkflash-current/fkflash-0.1.7/mspgcc/: bsl.py
changes/libftdi-0.20/: CMakeLists.txt
changes/libftdi-0.20/bindings/: CMakeLists.txt
changes/libkitclient-0.9.11/: CMakeLists.txt  Module.cmake.in  Packages.cmake
changes/libkitclient-0.9.11/contrib/: 99-libftdi.rules  contrib.cmake
changes/libkitclient-0.9.11/contrib/d2xx/: ftd2xx.h  make_lib.bat
changes/libkitclient-0.9.11/contrib/liburpc_copy/: cmdflags.cpp  protocol.c  socket.cpp
changes/libkitclient-0.9.11/examples/: example.py  sharing.cpp  terminal.py
changes/libkitclient-0.9.11/src/: CMakeLists.txt  device.cpp  deviceutils.cpp  libkitclient
changes/libkitclient-0.9.11/src/ftdi/: ftdi.cmake  ftdibackend.cpp  ftdidevice.cpp  ftdidevice_unix.cpp  ftdidevice_win.cpp
changes/libkitclient-0.9.11/src/ip/: ip  ipdevice.cpp  ipproto.h  ipservice.cpp
changes/libkitclient-0.9.11/src/qtapi/: qtapi.cmake  qtapi_device.cpp
changes/libkitclient-0.9.11/src/tests/: test.cpp
changes/libkitclient-0.9.11/swig/: CMakeLists.txt
changes/libusb-compat-0.1.5/libusb/: core.c
changes/msp430gcc-patched/binutils-2.18/bfd/: archures.c  bfd-in2.h  cpu-msp430.c  elf32-msp430.c  libbfd.h  reloc.c
changes/msp430gcc-patched/binutils-2.18/bfd/doc/: archures.texi  reloc.texi
changes/msp430gcc-patched/binutils-2.18/binutils/: cxxfilt.c  objdump.c
changes/msp430gcc-patched/binutils-2.18/gas/: read.c  stabs.c
changes/msp430gcc-patched/binutils-2.18/gas/config/: tc-msp430.c
changes/msp430gcc-patched/binutils-2.18/include/elf/: msp430.h
changes/msp430gcc-patched/binutils-2.18/ld/: Makefile.am  Makefile.in  configure.tgt
changes/msp430gcc-patched/binutils-2.18/opcodes/: msp430-dis.c
changes/msp430gcc-patched/gcc-3.2.3/: THIS_ACTUALLY_WORKS_WITH_VERSION_3_2_AND_BELOW_2002_09_02  configure.in  gcc-3.2.3-cygwin.patch
changes/msp430gcc-patched/gcc-3.2.3/include/: obstack.h
changes/msp430gcc-patched/msp430-libc/include/: io.h  msp430x20x3.h  msp430x21x2.h  msp430x22x2.h  msp430x23x.h  msp430x42x0.h  msp430x54xx.h
changes/msp430gcc-patched/msp430-libc/src/: Makefile
changes/qdevkit-current/qdevkit-1.2.7/: Packages.cmake
changes/qdevkit-current/qdevkit-1.2.7/src/: qdevicemgr.h  qdevkit.desktop  trayicon.cpp
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/: CMakeLists.txt
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/amarok2/: amarok2.py  plugin.xml
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/filetransfer/: CMakeLists.txt
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/fkflash/: CMakeLists.txt  fkflash.cpp  fkflash.py  fkflash.qrc
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/releaseinfo/: release.py
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/rstbrowser/: CMakeLists.txt  rstbrowser.cpp
changes/qdevkit-plugins-current/qdevkit-plugins-1.2.6/virtualkit/: QOpenCVWidget.cpp  virtualkit.qrc
msp430-libc/doc/: devheaders.txt  volatil
msp430-libc/include/: msp430x22x4.h  msp430x23x0.h  msp430x241x.h  msp430x24x.h  msp430x24x1.h  msp430x261x.h  msp430x42x.h  msp430x47xx.h  msp430xE42x.h  msp430xG42x0.h  msp430xG461x.h  signal.h
msp430-libc/include/msp430/: sd16.h  sys.h  timera.h  tlv.h  wdt_a.h
msp430-libc/src/: Makefile  gcrt0.S
msp430-libc/src/gnu/: qsort.c  strtol.c
msp430-libc/src/libm/: ChangeLog  addsf.c  cmpsf.c  divsf.c  ef_acos.c  ef_asin.c  ef_fmod.c  ef_j0.c  ef_log.c  ef_log10.c  ef_pow.c  ef_sqrt.c  eqsf.c  fixsfdi.c  fixunssfdi.c  fixunssfsi.c  floatdisf.c  floatsisf.c  gesf.c  gtsf.c  lesf.c  ltsf.c  mulsf.c  nesf.c  sqrt.S
msp430-libc/src/stdlib/: _init_section__.c  abort.S  div.S  exit.S  ldiv.S  mul10.S  setjmp.S
output/: metadata  metadata.debuginfo
output/files/: manifest.json
output/files/include/Qt/: qatomic_aarch64.h
output/files/include/QtCore/: qatomic_arch.h
output/files/include/fcmake/: keychain.h
output/files/include/libkitclient/: device.h
output/files/include/qdevkit/: fileselector.h  generalconfig.h  trayicon.h
output/files/lib/: libQtCLucene.la  libQtCore.la  libQtCore.so.4.8.7  libQtDBus.la  libQtDesignerComponents.prl  libQtGui.la  libQtHelp.la  libQtHelp.prl  libQtHelp.so.4.8.7  libQtNetwork.la  libQtNetwork.prl  libQtNetwork.so.4.8.7  libQtSql.la  libQtSql.prl  libQtTest.la  libQtTest.prl  libQtTest.so.4.8.7  libQtUiTools.prl  libQtXml.la  libssh.so.4.8.1  libusb-1.0.la  libusb-1.0.so.0.1.0  libusb.la  libusbpp.la
output/files/lib/debug/lib/: libkitclient.so.debug  (+3 more)
output/files/lib/pkgconfig/: QtDBus.pc  QtDesigner.pc  QtTest.pc  libssh.pc  libusb-1.0.pc
output/files/lib64/: libftdi.so.1.20.0  libftdi1.so.2  libftdi1.so.2.3.0
output/files/lib64/pkgconfig/: libftdi.pc  libftdi1.pc  libftdipp1.pc
repo/: summary
temp/fcmake-0.4.2/src/: category.cpp  fcmake.rc  key.cpp
temp/libkitclient-current/libkitclient-0.9.11/contrib/: contrib.cmake
temp/libkitclient-current/libkitclient-0.9.11/src/: CMakeLists.txt
test_install/fcmake-0.4.2/: Packages.cmake
test_install/fcmake-0.4.2/src/: category.cpp  fcmake_export.h  remote.cpp  tree.h
test_install/fitkitutils/: build-app.sh
(+59 files in other folders)
